# nmea2000

./: .gitignore  .pre-commit-config.yaml  README.md  canboat.json  canboat2python.py  check_generated_files.py  import_tests.js  import_tests.py  pyproject.toml  python.PGNs.j2  python.consts.j2  python.template.j2  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: codeql.yml  copy-canboat-json.yml  python-build.yml  python-package.yml  python-publish.yml
nmea2000/: __init__.py  cli.py  consts.py  decoder.py  decoder_formats.py  device.py  encoder.py  encoder_formats.py  input_formats.py  ioclient.py  message.py  pgns.py  utils.py
tests/: NMEA2000TestServer.py  canboatjs_roundtrip.json  conftest.py  recombine-frames-1.in  recombine-frames-2.in  recombine-frames-3.in  recombine-frames-4.in  recombine-frames-5.in  recombine-frames.in  sample.json  test_bst_95.py  test_bst_d0.py  test_cli.py  test_decoder.py  test_device.py  test_encoder.py  test_input_formats.py  test_ioclient.py  test_recombine.py  test_tcp_client.py  test_utils.py  test_waveshare_gateway.py
