[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmea2000"
version = "2026.4.3"
description = "NMEA 2000 encoder and decoder"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Tomer-w" },
]
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.10,<4.0",
    "pyserial-asyncio>=0.6",
    "tenacity>=9.0.0",
    "python-can>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/tomer-w/nmea2000"
Repository = "https://github.com/tomer-w/nmea2000"
Issues = "https://github.com/tomer-w/nmea2000/issues"

[project.scripts]
nmea2000-cli = "nmea2000.cli:main"

[tool.setuptools.packages.find]
include = ["nmea2000*"]

[tool.ruff]
extend-exclude = [ "nmea2000/pgns.py" ]

[tool.pylint.messages_control]
disable = ["line-too-long"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
